--- a/config/database.yml
+++ b/config/database.yml
@@ -5,24 +5,24 @@
 #   gem "sqlite3"
 #
 default: &default
-  adapter: mysql2
+  adapter: postgresql
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  host: 172.18.0.12
-  username: root
-  password: mysql
-  socket: /var/run/mysqld/mysqld.sock
+  port: 5432
+  host: 172.18.0.13
+  username: postgres
+  password: postgres
 
 development:
   <<: *default
-  database: blank_project_development
+  database: time_tracker_development
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: blank_project_test
+  database: time_tracker_test
 
 production:
   <<: *default
-  database: blank_project_production
+  database: time_tracker_production
