--- a/config/database.yml
+++ b/config/database.yml
@@ -8,7 +8,7 @@ default: &default
   adapter: postgresql
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   port: 5432
-  host: 172.18.0.13
+  host: <%= ENV["LOCAL_DATABASE_HOST"]%>
   username: postgres
   password: postgres
 
